brat/test/golden/error/vectorise-type-mismatch2.brat
bad :: Vec(Float, 1)
bad = 1 of 42
