brat/test/golden/error/vectorise-type-mismatch2.brat.golden
Error in test/golden/error/vectorise-type-mismatch2.brat on line 2:
bad = 1 of 42
           ^^

  Type error: Expected something of type `Float` but got `42`

